[gd_scene load_steps=5 format=3 uid="uid://c0cmhwhjn7n5n"]

[ext_resource type="PackedScene" uid="uid://dybs82o838o0x" path="res://Player.tscn" id="1_7138j"]
[ext_resource type="Script" path="res://Main.gd" id="1_hqm2u"]
[ext_resource type="PackedScene" uid="uid://dedlar2vupiy7" path="res://Mob.tscn" id="2_66ocf"]

[sub_resource type="Curve2D" id="Curve2D_58urx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_hqm2u")
mob_scene = ExtResource("2_66ocf")

[node name="Player" parent="." instance=ExtResource("1_7138j")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_58urx")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
